Adding Message and file in index and sh file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title> Sample File to test Git </title>
     </head>
     <body>
-        <h1> Test He </h1>
-        <h2> Test H2Tag </h2>
-        <h3> test jnfjs</h3>
+        <div class="gitfile1">
+            <h1>First Heading</h1>
+        </div>
     </body>
 </html>
