chnage in main br file text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <div class="gitfile1">
             <h1>First Heading</h1>
+            <h3> For CHnaging main Branch</h3>
         </div>
     </body>
 </html>
